@@ -121,10 +121,12 @@ void VG_(demangle) ( Bool do_cxx_demangling, Bool do_z_demangling,
    // - C++ mangled symbols start with "_Z" (possibly with exceptions?)
    // - Rust "legacy" mangled symbols start with "_Z".
    // - Rust "v0" mangled symbols start with "_R".
+   // - D programming language mangled symbols start with "_D".
    // XXX: the Java/Rust/Ada demangling here probably doesn't work. See
    // https://bugs.kde.org/show_bug.cgi?id=445235 for details.
    if (do_cxx_demangling && VG_(clo_demangle)
-       && orig != NULL && orig[0] == '_' && (orig[1] == 'Z' || orig[1] == 'R')) {
+       && orig != NULL && orig[0] == '_'
+       && (orig[1] == 'Z' || orig[1] == 'R' || orig[1] == 'D')) {
       /* !!! vvv STATIC vvv !!! */
       static HChar* demangled = NULL;
       /* !!! ^^^ STATIC ^^^ !!! */
@@ -134,7 +136,11 @@ void VG_(demangle) ( Bool do_cxx_demangling, Bool do_z_demangling,
          VG_(arena_free) (VG_AR_DEMANGLE, demangled);
          demangled = NULL;
       }
-      demangled = ML_(cplus_demangle) ( orig, DMGL_ANSI | DMGL_PARAMS );
+      if (orig[1] == 'D') {
+        demangled = dlang_demangle ( orig, DMGL_ANSI | DMGL_PARAMS );
+      } else {
+        demangled = ML_(cplus_demangle) ( orig, DMGL_ANSI | DMGL_PARAMS );
+      }
 
       *result = (demangled == NULL) ? orig : demangled;
    } else {
