@@ -1,0 +1,17 @@
+#include <iostream>
+
+extern "C" void _D4test4findFiPxaZPxa()
+{
+   int a;
+   if (a)
+      std::cout << "a\n";
+   else
+      std::cout << "!a\n";
+}
+
+int main()
+{
+   _D4test4findFiPxaZPxa();
+}
+
+
