@@ -93,6 +93,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 463027  broken check for MPX instruction support in assembler
 464476  Firefox fails to start under Valgrind
 464859  Build failures with GCC-13 (drd tsan_unittest)
+464969  D language demangling
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
